fix(cli): netty native access
Signed-off-by: Sam Gammon <sam@elide.dev>